// Copyright (c) 2017, Sikan Zhu
// All rights reserved.
// 
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are met:
// 
// * Redistributions of source code must retain the above copyright notice, this
//   list of conditions and the following disclaimer.
// 
// * Redistributions in binary form must reproduce the above copyright notice,
//   this list of conditions and the following disclaimer in the documentation
//   and/or other materials provided with the distribution.
// 
// * Neither the name of Sikan Zhu nor the names of its
//   contributors may be used to endorse or promote products derived from
//   this software without specific prior written permission.
// 
// THIS SOFTWARE IS PROVIDED BY SIKAN ZHU AND CONTRIBUTORS "AS IS"
// AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
// IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
// DISCLAIMED. IN NO EVENT SHALL SIKAN ZHU OR CONTRIBUTORS BE LIABLE
// FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
// DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
// CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
// OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

// head
syntax = "proto3";

import "innova_common.proto";
import "innova_protocol.proto";

package innova.demo;

enum PTYPE
{
	BASIC = 0;
	MOVEMENT = 1;
	SCALE = 2;
	NUM_PTYPE = 3;
}

enum CTYPE
{
	GRAPHICS = 0;
	NUM_CTYPE = 1;
}

message ActorBasic
{
	string appearance = 1;
	string name = 2;
	string parent = 3;
}

message ActorMovement
{
	innova.common.Float3 location = 1;
	innova.common.Float3 velocity = 2;
	innova.common.Quaternion rotation = 3;
	innova.common.Float4 angular = 4;
}

message ActorScale
{
	innova.common.Float3 scale = 1;
}

message ConfigGraphics
{
	float max_camera_distance = 1;
	float max_view_distance = 2;
}